--- a/src/main/resources/static/web/accounts.html
+++ b/src/main/resources/static/web/accounts.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://kit.fontawesome.com/23209d6861.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./styles/styleAccounts.css">
+    <title>Accounts</title>
 </head>
 <body>
-$END$
+    <div id="app">
+        <div class="d-flex align-items-center justify-content-center">
+            <section class="d-flex flex-column w-50">
+                <h2>Accounts</h2>
+                <table class="table table-dark table-hover">
+                    <thead>
+                        <tr>
+                            <th>NUMBER</th>
+                            <th>CREATION DATE</th>
+                            <th>AMOUNT</th>
+                            <th>TRANSACTIONS</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="account in accounts">
+                            <td>{{account.number}}</td>
+                            <td>{{formatDate(account.creationDate)}}</td>
+                            <td>{{account.balance}}</td>
+                            <td><a :href="path(account)" href="#">show</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+        </div>
+    </div>
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/vue@3"></script>
+    <script src="./scripts/accounts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 </html>
